force-app/main/default/objects/Product2/fields/Attendant_Software__c.field-meta.xml
<CustomField>
    <fullName>Attendant_Software__c</fullName>
    <description>Software installed on or coming with certain hardware.</description>
    <label>Attendant Software</label>
    <length>80</length>
    <type>Text</type>
</CustomField>