force-app/main/default/objects/Product2/fields/Paper_Product__c.field-meta.xml
<CustomField>
    <fullName>Paper_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Product</label>
    <type>Checkbox</type>
</CustomField>