force-app/main/default/objects/Product2/recordTypes/Office_Supplies.recordType-meta.xml
<RecordType>
    <fullName>Office_Supplies</fullName>
    <active>true</active>
    <label>Office Supplies</label>
</RecordType>